--- a/NewMVCMusicStore/Views/Home/Index.cshtml
+++ b/NewMVCMusicStore/Views/Home/Index.cshtml
@@ -3,6 +3,24 @@
 }
 
 <div class="jumbotron">
+
+    @{var items = new string[] { "one", "two", "three" };
+
+    }
+
+    <html>
+<head>
+    <body>
+
+
+    </body>
+</head>
+</html>
+
+
+
+
+
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
